[package]
name = "engine"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "engine"
path = "src/bin/server.rs"

[dependencies]
tonic = "0.12.1"
prost = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
clang = "2.0.0"

[build-dependencies]
tonic-build = "0.12.1"
